<resources>

    <string name="app_name">Notes</string>
    <string name="note_title">Note Title</string>
    <string name="create_note">Create Note</string>
    <string name="note_content">Note Content</string>

    <string name="cancel_note_dialog_title">Cancel Note?</string>
    <string name="cancel_note_dialog_message">Changes will be lost!</string>
    <string name="cancel_note_dialog_positive">Yes</string>
    <string name="cancel_note_dialog_negative">No</string>

    <string name="edit_note">Edit Note</string>
    <string name="delete_note">Delete Note</string>

    <string name="delete_note_dialog_title">Delete Note?</string>
    <string name="delete_note_dialog_message">Are you sure you want to delete this note? This cannot be undone!</string>
    <string name="delete_note_dialog_positive">Delete</string>
    <string name="delete_note_dialog_negative">Cancel</string>

    <string name="save_changes_dialog_title">Confirm Changes</string>
    <string name="save_changes_dialog_message">Save changes to note?</string>
    <string name="save_changes_dialog_positive">Save Changes</string>
    <string name="save_changes_dialog_negative">No</string>

    <string name="read_more">Read More…</string>

</resources>
