<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity">

    <EditText
        android:id="@+id/note_title_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/note_title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/note_content_et"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/note_title_et"
        app:layout_constraintBottom_toTopOf="@id/create_note_btn"
        android:importantForAutofill="no"
        android:hint="@string/note_content"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:backgroundTint="@android:color/transparent"/>

    <Button
        android:id="@+id/create_note_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/create_note" />

</androidx.constraintlayout.widget.ConstraintLayout>