<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowNoteActivity">

    <TextView
        android:id="@+id/timestamp_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="last modified on 24/3/2020 , 17:38"
        android:textStyle="italic"
        android:padding="8dp"/>

    <ImageButton
        android:id="@+id/delete_note_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_delete"
        android:contentDescription="@string/delete_note"
        style="@android:style/Widget.Material.Button.Borderless.Small" />

    <ImageButton
        android:id="@+id/enable_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete_note_button"
        android:src="@drawable/ic_edit"
        android:contentDescription="@string/edit_note"
        style="@android:style/Widget.Material.Button.Borderless.Small" />

    <EditText
        android:id="@+id/note_title_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/timestamp_tv"
        android:hint="@string/note_title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:enabled="false"
        android:textColor="@drawable/disabled_et_color"/>

    <EditText
        android:id="@+id/note_content_et"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/note_title_et"
        app:layout_constraintBottom_toTopOf="@id/edit_note_button"
        android:importantForAutofill="no"
        android:hint="@string/note_content"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:backgroundTint="@android:color/transparent"
        android:enabled="false"
        android:textColor="@drawable/disabled_et_color"/>

    <Button
        android:id="@+id/edit_note_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/edit_note"
        android:visibility="gone"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>